# devsecops-poc

./: .env.example  .envrc  .gitignore  .gitleaks.toml  devbox.json  docker-compose.test.yml  docker-compose.yml  justfile  renovate.json  ruff.toml
api/: Dockerfile  Dockerfile.dev  Dockerfile.test  pyproject.toml
api/alembic/: env.py
api/alembic/versions/: 001_initial_schema.py  002_add_certifications.py  003_timestamps_to_timestamptz.py  004_add_user_id_to_messages.py  005_add_user_id_to_certifications.py
api/src/: config.py  main.py
api/src/application/commands/: __init__.py  schedule_message.py
api/src/application/dtos/: __init__.py  certification_dto.py  message_dto.py
api/src/application/interfaces/: __init__.py  event_publisher.py  unit_of_work.py
api/src/application/ports/: __init__.py
api/src/application/ports/inbound/: __init__.py  certification_use_cases.py  get_message.py  schedule_message.py
api/src/application/ports/outbound/: __init__.py  certification_repository.py  event_publisher.py  message_repository.py  unit_of_work.py
api/src/application/queries/: __init__.py  get_message.py
api/src/application/services/: __init__.py  get_certification_service.py  get_message_service.py  list_certification_types_service.py  schedule_message_service.py  submit_certification_service.py
api/src/domain/entities/: __init__.py  certification.py  message.py
api/src/domain/repositories/: __init__.py  message_repository.py
api/src/domain/value_objects/: __init__.py  channel_type.py  content.py
api/src/infrastructure/: logging.py  secrets.py
api/src/infrastructure/adapters/: __init__.py
api/src/infrastructure/adapters/messaging/: kinesis_event_publisher.py
api/src/infrastructure/messaging/: kinesis_publisher.py
api/src/infrastructure/persistence/: database.py  message_repository.py  models.py  unit_of_work.py
api/src/presentation/api/: dependencies.py
api/src/presentation/api/v1/: auth.py  (+4 more)
api/src/presentation/middleware/: __init__.py  auth.py  correlation.py  csrf.py  rate_limit.py  request_validation.py
api/tests/: conftest.py
api/tests/unit/application/: test_get_message.py  test_schedule_message.py
api/tests/unit/domain/: test_message.py  test_value_objects.py
api/tests/unit/middleware/: test_auth_cookies.py  test_csrf.py
infra/: .envrc  app.py  cdk.context.json  cdk.json  github-oidc-bootstrap.yaml  main.py  pyproject.toml
infra-fs/: README.md  app.py  cdk.json  pyproject.toml
infra-fs/stacks/: __init__.py  api_stack.py  auth_stack.py  data_stack.py  frontend_stack.py  monitoring_stack.py  scheduler_stack.py  security_stack.py  worker_stack.py
infra/stacks/: __init__.py  auth_stack.py  compliance_stack.py  compute_stack.py  data_stack.py  edge_stack.py  frontend_stack.py  github_oidc_stack.py  monitoring_stack.py  network_stack.py  observability_stack.py  registry_stack.py  security_stack.py  threat_detection_stack.py
scheduler/: .envrc  Dockerfile  Dockerfile.dev  pyproject.toml
scheduler/src/: config.py  main.py  publisher.py  scheduler.py
scheduler/src/infrastructure/: __init__.py  logging.py
testing/: Dockerfile.kali  OPTIMIZATIONS.md  README.md  Vagrantfile  conftest.py  justfile  pentest_agent.py  pyproject.toml  test_pentest.py
worker/: Dockerfile  Dockerfile.dev  pyproject.toml
worker/src/: config.py  consumer.py  main.py  processor.py
worker/src/application/: __init__.py
worker/src/application/services/: __init__.py  message_delivery_service.py
worker/src/channels/: __init__.py  base.py  email.py  facebook.py  instagram.py  linkedin.py  sms.py  whatsapp.py
worker/src/domain/: __init__.py
worker/src/domain/ports/: __init__.py  channel_gateway.py  content_filter.py  idempotency.py  message_repository.py  social_media_publisher.py
worker/src/infrastructure/: __init__.py  idempotency.py  logging.py
worker/src/infrastructure/adapters/: __init__.py  agent_publisher.py  channel_gateway_factory.py  content_filter_impl.py  direct_publisher.py  message_repository_impl.py
worker/tests/unit/: test_channels.py  test_content_filter.py  test_idempotency.py
(+58 files in other folders)
