[project]
name = "pentest"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pytest>=8.0.0",
    "pytest-xdist>=3.5.0",
    "pytest-html>=4.1.0",
    "boto3>=1.34.0",
    "docker>=7.0.0",
    "strands-agents>=1.24.0",
]

[tool.pytest.ini_options]
addopts = "-s"
markers = [
    "slow: marks tests as slow (nmap, nikto, sqlmap)",
]
